Fix Bar spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17464,3 +17464,11 @@ body:has(.px-4.pt-16.pb-24.bg-white.sm\:px-6.sm\:pt-24.lg\:px-8.lg\:py-32) {
     padding: 0px !important;
   }
 }
+.header-space{
+  padding-top: 1.5rem !important;
+}
+body:has(.engage-announcement-bar){
+  .header-space{
+    padding-top: 4rem !important;
+  }
+}
